# minimax

./: Makefile.in  README.md  aclocal.m4  configure  configure.ac
src/: Makefile.am  Makefile.in  minimax.c  minimax.h  sub.c  tree.c  tree.h
tests/: Makefile.am  Makefile.in  check_tree.c  check_tree.ts
